# django-split-settings

./: .editorconfig  .flake8  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  run_coveralls.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  glob.data.json  glob.meta.json  inspect.data.json  inspect.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.7/split_settings/: __init__.data.json  __init__.meta.json  tools.data.json  tools.meta.json
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
example/: requirements.txt
example/example/settings/: __init__.py
example/example/settings/components/: database.py  locale.py  logging.py  templates.py
example/tests/: __init__.py  fixture_to_include.py  test_import.py  test_split_settings.py  test_style.py  test_tools.py
split_settings/: __init__.py  loaders.py  tools.py  wrappers.py
tests/: conftest.py  fixture_to_include.py  test_import.py  test_sequential_import.py  test_split_settings.py  test_tools.py  test_unicode.py  test_wrappers.py  utils.py
tests/settings/: __init__.py
tests/settings/alt_ext/: __init__.py  include  include.conf  include.double.conf  optional.ext
tests/settings/basic/: fixture_to_include.py  fixture_unsupported.json
tests/settings/components/: apps_middleware.py  database.py  static.py  templates.py  testing.py
tests/settings/merged/: __init__.py
tests/settings/merged/components/: apps_middleware.py  base.py  choice_right.py  database.py  locale.py  logging.py  static.py  templates.py  testing.py
tests/settings/recursion/: __init__.py  ok.py
tests/settings/resource/: __init__.py  base.conf  locale.conf  templates.py
tests/settings/resources/: __init__.py  apps_middleware  base.conf  database.conf  error.conf  locale.conf  logging.py  static.settings
tests/settings/resources/multiple/subdirs/: file.conf
tests/settings/sequential.d/: 010-first.py  020-second.py  040-third.py  300-fourth.py
tests/settings/stacked/: __init__.py  base.py
tests/settings/stacked/db/: persistent.py
