[project]
name = "django-split-settings"
version = "1.3.2"
description = "Organize Django settings into multiple files and directories. Easily override and modify settings. Use wildcards and optional settings files."
authors = [
  { name = "sobolevn", email = "mail@sobolevn.me" },
  { name = "Visa Kopu" },
  { name = "Antti Kaihola" }
]
license = { text = "BSD-2-Clause" }
readme = "README.md"
packages = [
  { include = "split_settings" }
]
requires-python = ">=3.9"

keywords = [
  "django",
  "settings",
  "configuration",
  "config",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://django-split-settings.readthedocs.io"
Repository = "https://github.com/sobolevn/django-split-settings"
Funding = "https://github.com/sponsors/wemake-services"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
django = [
  { version = "^4.2", python = "<3.10" },
  { version = "^5.2", python = ">=3.10" },
]

mypy = "^1.10"
wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
nitpick = "^0.35"

doc8 = "^1.1"

pytest = "^8.1"
pytest-cov = ">=5,<7"
pytest-randomly = "^3.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3"
sphinx-autodoc-typehints = "^2.2"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"
