[project]
name = "django-split-settings"
version = "1.3.2"
description = "Organize Django settings into multiple files and directories. Easily override and modify settings. Use wildcards and optional settings files."
authors = [
  {name = "sobolevn", email = "mail@sobolevn.me"},
  {name = "Visa Kopu"},
  {name = "Antti Kaihola"},
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "django",
  "settings",
  "configuration",
  "config",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Funding = "https://github.com/sponsors/wemake-services"
Repository = "https://github.com/sobolevn/django-split-settings"
Homepage = "https://django-split-settings.readthedocs.io"

[dependency-groups]
dev = [
  "django>=4.2,<5.3",
  "mypy>=1.10",
  "wemake-python-styleguide>=1.0",
  "doc8>=1.1",
  "pytest>=8.1",
  "pytest-cov>=5,<7",
  "pytest-randomly>=3.12",
]
docs = [
  "sphinx>=7.3",
  "sphinx-autodoc-typehints>=2.2",
  "m2r2>=0.3",
  "tomli>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["split_settings"]

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"
